--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,10 @@ dotenvy = "0.15"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
+# Colored output
+colored = "2.0"
+console = "0.15"
+
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
