--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,10 +63,16 @@ thiserror = "1.0"
 
 openssl = { version = "0.10.73", features = ["vendored"] }
 
-fzstream-client  = { git = "https://github.com/0xfnzero/fzstream-client", branch="feature/v2" }
-fzstream-common  = { git = "https://github.com/0xfnzero/fzstream-common", branch="feature/v2" }
+fzstream-client  = { git = "https://github.com/0xfnzero/fzstream-client" }
+fzstream-common  = { git = "https://github.com/0xfnzero/fzstream-common" }
+
+# Workspace dependencies
+# fzstream-client = { workspace = true, features = ["compression"] }
+# fzstream-common = { workspace = true }
+
+
 
 rustls = { version = "0.23", features = ["ring"] }
-solana-streamer-sdk = "0.3.10"
+solana-streamer-sdk = "0.4.0"
 
 
